--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 sample-files filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+sample-files/* filter=lfs diff=lfs merge=lfs -text
