--- a/.drone.yml
+++ b/.drone.yml
@@ -9,8 +9,8 @@ steps:
 - name: format
   image: golang
   commands:
-      - go fmt ./...
-      - go vet ./...
+      - go fmt $(go list ./... | grep -v /vendor/)
+      - go vet $(go list ./... | grep -v /vendor/)
 
 - name: test-func
   image: golang
