--- a/.drone.yml
+++ b/.drone.yml
@@ -6,10 +6,10 @@ workspace:
     path: src/github.com/saguywalker/add2git-lfs
 
 steps:
-- name: get
-  image: golang
-  commands:
-      - go get ./...
+    #- name: get
+    #  image: golang
+    #commands:
+    #  - go get ./...
 
 - name: format
   image: golang
@@ -25,6 +25,7 @@ steps:
 - name: compile
   image: golang
   commands:
+      - go get ./...
       - rice embed-go
       - CGO_ENABLED=0 go build
       - mv add2git-lfs bin/add2git-lfs
